--- a/site/_includes/partials/global/site-head.njk
+++ b/site/_includes/partials/global/site-head.njk
@@ -2,7 +2,9 @@
   <header class="l-site-head">
     <a href="/" class="invert-link">
       <span class="l-site-name">
-        {% include "partials/icons/logo.svg" %}
+        <!--img src="/favicon.png"-->
+        {% include "partials/i/logo.png" %}
+        {#% include "partials/icons/logo.svg" %#}
         <span class="l-site-title site-title">{{ site.name }}</span>
       </span>
     </a>
